--- a/02_02_23/.vscode/settings.json
+++ b/02_02_23/.vscode/settings.json
@@ -32,5 +32,12 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "/home/avenable/CSCI202-SP23-Demos/02_02_23",
+            "binaryPath": "/home/avenable/CSCI202-SP23-Demos/02_02_23/main",
+            "binaryArgs": []
+        }
+    ]
 }
